fix test execution